--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,30 @@ uuid = "c735baf2-7355-465f-b971-474328a335c9"
 authors = ["mixpap <mighalis@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+Cosmology = "76746363-e552-5dba-9a5a-cef6fa9cc5ab"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+FITSIO = "525bcba6-941b-5504-bd06-fd0dc1a4d2eb"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NumericIO = "6c575b1c-77cb-5640-a5dc-a54116c90507"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+PhysicalConstants = "5ad8b20f-a522-5ce9-bfc9-ddf1d5bda6ab"
+ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
+QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+UnitfulAngles = "6fb2a4bd-7999-5318-a3b2-8ad61056cd98"
+UnitfulAstro = "6112ee07-acf9-5e0f-b108-d242c714bf9f"
+
 [compat]
 julia = "1"
 
