--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NumericIO = "6c575b1c-77cb-5640-a5dc-a54116c90507"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+PCHIPInterpolation = "afe20452-48d1-4729-9a8b-50fb251f06cd"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PhysicalConstants = "5ad8b20f-a522-5ce9-bfc9-ddf1d5bda6ab"
 ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
