fix: GLMakie to Makie

--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 NumericIO = "6c575b1c-77cb-5640-a5dc-a54116c90507"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 PCHIPInterpolation = "afe20452-48d1-4729-9a8b-50fb251f06cd"
